# rust-web3

./: Cargo.toml  README.md  cert.pem  key.pem
src/: backupmain.rs  main.rs  teste.rs
