[package]
name = "rust-web3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.14.12"
solana-client = "1.14.12"
bs58 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token-client = "0.4.0"
spl-token = "3.2.0"
hyper = {version = "0.14.24", features = ["full"]}
tokio = {version = "1.14.0", features = ["full"]}